# bessie

./: .gitignore  README.md  pyproject.toml
bessie/: backends.py  bessie.py  settings.py  utils.py  wrappers.py
bessie/templates/: bessie.jinja
